# dev_setup

./: LICENSE  README.md  install_ros.sh  install_vim_sublime.sh  macos_setup.sh  setup_git.sh  setup_github_ssh.sh  setup_ubuntu.sh  ubuntu_setup.sh  zshrc
ROS/: install_ros.sh  setup_ros.sh
apps/docker/: run_postgres.sh
apps/docker/ros/: Dockerfile  tmux.conf  try.sh
apps/sublime/: LaTeXTools.sublime-settings  README.md  dev.sublime-project
apps/sublime/cpp/ST3_cmake/: CMakeLists.txt  example.sublime-project
apps/sublime/python/: conda_py.sublime-project
cpp/: CMakeLists.txt
docker/ros/: Dockerfile_2  Dockerfile_PX4  Dockerfile_ROS  build_docker.sh  run_docker.sh
dotfiles/: bashrc  vimrc  zsh_ubuntu  zshrc_ubuntu
dotfiles/sublime/: packages.md
osx/: README.md  Solarized Dark.terminal  macos_setup.sh
osx/dotfiles/: config
osx/themes/: iterm2.json
settings/: Preferences.sublime-settings
sublime/: Preferences.sublime-settings  packages.md  setup_sublime.sh
ubuntu/: copy_dotfiles.sh  install_sublime_text.sh  install_terminator.sh  note.md  setup.sh  setup_sublime.sh  setup_vscode.sh  try_setup.sh  ubuntu_setup.sh
ubuntu/20/: setup.sh
ubuntu/ROS/: download_ros.sh
ubuntu/ROS/PX4/: ubuntu_sim.sh  ubuntu_sim_nuttx.sh
ubuntu/config/Code/: settings.json
ubuntu/config/dotfiles/ssh/: config
ubuntu/config/git/: gitconfig
ubuntu/config/terminator/: config
ubuntu/dotfiles/: bash_aliases  bashrc  zshrc_ubuntu
ubuntu/px4/: 1_install_deps.sh  2__install_px4.sh
ubuntu/ros/: 1_install_ros.sh  2_setup_ros.sh
vim/: config_vim.sh  vimrc
